<resources>
    <string name="app_name">ECO Store</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="clearAll">Clear All</string>
    <string name="mobile">Mobile</string>
    <string name="deleteProductMessage">Are You Want to delete this Product</string>
    <string name="deleteAllProductsMessage">Are You Want to delete all the Products</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="productContentDescription">add newproduct</string>
    <string name="imageContentDescription">Empty Product</string>
    <string name="price">Price</string>
    <string name="quantity">Qty</string>
    <string name="total">Total</string>
    <string name="productName">Product Name</string>
    <string name="toolbarTitle">Add New Product</string>
    <string name="noProducts">No products are available. The box is empty. Kindly add products using the below add button.</string>
    <string name="yourProducts">Your Products</string>
    <string-array name="products">
        <item>Mobile</item>
        <item>Laptop</item>
        <item>AC</item>
        <item>Washing Machine</item>
        <item>TV</item>
        <item>Fridge</item>
    </string-array>
</resources>