<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.HomeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/toolbar"
            android:minHeight="?attr/actionBarSize" />

        <TextView
            android:id="@+id/tvProductList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourProducts"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="gone"
            android:padding="@dimen/padding"
            android:textSize="@dimen/titleTextSize"
            android:layout_margin="@dimen/margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <Button
            android:id="@+id/btnClearAll"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:padding="@dimen/padding"
            android:textColor="@color/white"
            android:text="@string/clearAll"
            android:visibility="gone"
            android:background="@drawable/bg_button"
            android:layout_margin="@dimen/margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvProductList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@id/btnClearAll"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:contentDescription="@string/productContentDescription"
            android:foregroundGravity="center"
            android:src="@drawable/baseline_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/ivEmptyBox"
            android:layout_width="@dimen/emptyBoxSize"
            android:layout_height="@dimen/emptyBoxSize"
            android:visibility="gone"
            android:contentDescription="@string/imageContentDescription"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/box"/>

        <TextView
            android:id="@+id/tvNoProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noProducts"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:textSize="@dimen/titleTextSize"
            android:visibility="gone"
            android:textStyle="italic"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/ivEmptyBox"
            app:layout_constraintRight_toRightOf="@id/ivEmptyBox"
            app:layout_constraintTop_toBottomOf="@id/ivEmptyBox"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>